# mesaprocessframework

./: .autotools  .cproject  .project  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
src/: Makefile  Makefile.am  Makefile.in  dbus-interface.xml  dbusMesaInterface.c  dbusMesaInterface.h  dbusProcessInterface.c  dbusProcessInterface.h  dbusSvc.c  dbusSvc.h  dbus_process_api.c  dbus_process_api.h  main.c  paramSvc.c  paramSvc.h  parameter.h
src/.deps/: dbus_process_api.Po
src/dbus/: Makefile.am  Makefile.in  dbus-mesa-api.xml
src/dbus-process/: Makefile.in  dbus-process-api.xml
src/dbus-process-api/: Makefile.am  Makefile.in  dbus-process-api.xml
src/mesa/: Makefile.am  Makefile.in
